HRMarketing-469 Fix horizontal scroll caused by blockquote

--- a/RaccoonBlog.Web/Content/css/styles.less
+++ b/RaccoonBlog.Web/Content/css/styles.less
@@ -2509,6 +2509,11 @@ li.future {
 }
 
 .articleContent {
+    blockquote > * {
+        width: 200px;
+        min-width: 100%;
+    }
+
     iframe {
         max-width: 100%;
     }
